cluster/apps/default/hass-proxy/templates/service.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: hass-proxy
spec:
  ports:
    - name: hass-proxy
      port: 8123
      targetPort: 8123
---
kind: Endpoints
apiVersion: v1
metadata:
  name: hass-proxy
subsets:
  - addresses:
      - ip: 192.168.50.9
    ports:
      - name: hass-proxy
        port: 8123
