cluster/apps/default/hass-proxy/templates/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: hass-proxy
  annotations:
    external-dns.alpha.kubernetes.io/controller: dns-controller
spec:
  parentRefs:
    - name: envoy-external
      namespace: envoy-gateway
      sectionName: https
    - name: envoy-internal
      namespace: envoy-gateway
      sectionName: https
  hostnames:
    - hass.<secret:private-domain>
  rules:
    - backendRefs:
        - name: hass-proxy
          port: 8123
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: agh-proxy
  annotations:
    external-dns.alpha.kubernetes.io/controller: dns-controller
spec:
  parentRefs:
    - name: envoy-internal
      namespace: envoy-gateway
      sectionName: https
  hostnames:
    - agh.<secret:private-domain>
  rules:
    - backendRefs:
        - name: agh-proxy
          port: 8812
